<resources>
    <string name="app_name">Contact</string>
    <string name="avatar">Avatar du contact</string>
    <string name="precedent">&lt;</string>
    <string name="suivant">&gt;</string>
    <string name="precedent_long">Préc.</string>
    <string name="suivant_long">Suiv.</string>

    <string name="num">Num</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="tel">Tél</string>
    <string name="adresse">Adresse</string>
    <string name="cp">CP</string>
    <string name="email">Email</string>
    <string name="metier">Métier</string>
    <string name="situation">Situation</string>

    <string name="hint_num">N°</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prénom</string>
    <string name="hint_tel">Téléphone</string>
    <string name="hint_adresse">Adresse postale</string>
    <string name="hint_cp">Code postal</string>
    <string name="hint_email">adresse@mail.com</string>
    <string name="hint_metier">Profession</string>
    <string name="hint_situation">Situation</string>
    <string name="hint_id_contact">Entrer ID</string>

    <string name="debut">Début</string>
    <string name="fin">Fin</string>
    <string name="milieu">Milieu</string>
    <string name="numero">Aller à</string>
    <string name="supprimer">Supprimer</string>
    <string name="nouveau">Nouveau</string>
    <string name="sauvegarder">Sauvegarder</string>
</resources>